# reclipse

./: Cargo.toml  README.md
shaders/: basic.wgsl
src/: app.rs  lib.rs  main.rs  window.rs
src/asset/: asset_manager.rs  handle.rs  mesh.rs  mesh_pool.rs  mod.rs  sprite_mesh.rs  texture.rs
src/asset/pools/: mesh_pool.rs  mod.rs  texture_pool.rs
src/asset/primitives/: mod.rs  quad.rs
src/component/: mesh.rs  mod.rs  texture.rs  transform.rs
src/engine/: context.rs  gpu_resource.rs  input.rs  mod.rs  renderer.rs  vertex.rs
src/objects/: camera.rs  entity.rs  mod.rs  sprite.rs
src/scene/: mod.rs
src/transform/: mod.rs
src/util/: align.rs  mod.rs
