[package]
name = "reclipse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17.0"
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.20"
cg = { package = "cgmath", version = "0.18.0" }
instant = "0.1.12"
pollster = "0.3.0"
anyhow = "1.0.75"

[dependencies.image]
version = "0.24.7"
features = ["png", "jpeg"]
