[package]
name = "reclipse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17.0"
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.20"
glam = "0.24.2"
instant = "0.1.12"
pollster = "0.3.0"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"]}
serde_yaml = "0.9.25"
once_cell = "1.18.0"
async-trait = "0.1.73"
tokio = { version = "1.32.0", features = ["full"]}
futures = "0.3.28"
bevy_ecs = "0.11.3"

[dependencies.image]
version = "0.24.7"
features = ["png", "jpeg"]
